feat: remove redundant upvote endpoints
