# docs/api.yaml
@@ -590,71 +590,6 @@ paths:
           $ref: '#/components/responses/NotFound'
         '422':
           $ref: '#/components/responses/Unprocessable'
-  /sessions/{id}/questions/{qid}/upvote:
-    get:
-      summary: Get number of upvotes for a question
-      tags:
-        - Questions
-      parameters:
-        - name: id
-          in: path
-          required: true
-          schema:
-            type: string
-          description: ID of the session
-        - name: qid
-          in: path
-          required: true
-          schema:
-            type: string
-          description: ID of the question
-      responses:
-        '200':
-          description: Number of upvotes
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  total:
-                    type: integer
-                    description: Number of upvotes
-        '422':
-          $ref: '#/components/responses/Unprocessable'
-    post:
-      summary: Upvote a question
-      tags:
-        - Questions
-      security:
-        - BearerAuth: []
-      parameters:
-        - name: id
-          in: path
-          required: true
-          schema:
-            type: string
-          description: ID of the session
-        - name: qid
-          in: path
-          required: true
-          schema:
-            type: string
-          description: ID of the question
-      responses:
-        '200':
-          description: Question upvotée
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  total:
-                    type: integer
-                    description: Total number of upvotes
-        '401':
-          $ref: '#/components/responses/Unauthorized'
-        '422':
-          $ref: '#/components/responses/Unprocessable'
   /rooms:
     get:
       summary: List all rooms
