# src/main/java/com/techindna/eventsyncapi/controller/QuestionController.java
@@ -3,9 +3,6 @@ package com.techindna.eventsyncapi.controller;
 import com.techindna.eventsyncapi.dto.question.QuestionListResponseDto;
 import com.techindna.eventsyncapi.dto.question.QuestionRequestDto;
 import com.techindna.eventsyncapi.dto.question.QuestionResponseDto;
-import com.techindna.eventsyncapi.exception.BadRequestException;
-import com.techindna.eventsyncapi.exception.InternalServerErrorException;
-import com.techindna.eventsyncapi.exception.NotFoundException;
 import com.techindna.eventsyncapi.service.QuestionService;
 import jakarta.servlet.http.HttpServletRequest;
 import lombok.RequiredArgsConstructor;
@@ -53,20 +50,4 @@ public class QuestionController {
                 .body(questionService.createQuestion(id, request, userId));
     }
 
-    @GetMapping("/{id}/questions/{qid}/upvote")
-    public ResponseEntity<?> getUpvoteCount(@PathVariable String id, @PathVariable String qid) {
-        try {
-            return ResponseEntity.status(HttpStatus.OK)
-                    .body(questionService.getUpvoteCount(id, qid));
-        } catch (BadRequestException e) {
-            return ResponseEntity.status(HttpStatus.BAD_REQUEST)
-                    .body(e.getMessage());
-        } catch (NotFoundException e) {
-            return ResponseEntity.status(HttpStatus.NOT_FOUND)
-                    .body(e.getMessage());
-        } catch (InternalServerErrorException e) {
-            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
-                    .body("An unexpected error occurred, please try again later");
-        }
-    }
 }
